test_case/rust-lang_rust/28178_139594762.rs

/* offending-line */
//~^ ERROR error1
//~| ERROR error2
